tareas_adicionales/k8s/deployment-servidor-rethinkdb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-servidor-rethinkdb
spec:
  replicas: 1
  selector:
    matchLabels:
      component: servidor-rethinkdb
  template:
    metadata:
      labels:
        component: servidor-rethinkdb
    spec:
      containers:
      - name: pod-servidor-rethinkdb
        image: rethinkdb
        ports:
        - containerPort: 8080
