tareas_adicionales/k8s/cluster-ip-servidor-rethinkdb.yml
apiVersion: v1
kind: Service
metadata:
  name: servidor-redb 
spec:
  type: ClusterIP
  selector:
    component: servidor-rethinkdb
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: cliente
    port: 28015
    targetPort: 28015
